build_output.log

> build
> vite build

vite v8.0.14 building client environment for production...
[plugin @laravel/vite-plugin-wayfinder] Types generated for actions, routes, form variants
[2Ktransforming...✗ Build failed in 46.18s

PWA v1.3.0
mode      generateSW
precache  174 entries (3116.77 KiB)
files generated
  public/build/sw.js
  public/build/workbox-bc229a5e.js
error during build:
Build failed with 1 error:

[plugin vite-plugin-pwa:build]
Error: Build failed with 1 error:

[plugin vite:react-babel] /media/budgei/Development2/Php/tokona/resources/js/features/consignments/components/ConsignmentColumn.tsx:150:4
SyntaxError: /media/budgei/Development2/Php/tokona/resources/js/features/consignments/components/ConsignmentColumn.tsx: Unexpected token (150:4)

  148 |     );
  149 | }
> 150 |     },
      |     ^
  151 | ];
  152 |
    at constructor (/media/budgei/Development2/Php/tokona/node_modules/@babel/parser/lib/index.js:365:19)
    at TypeScriptParserMixin.raise (/media/budgei/Development2/Php/tokona/node_modules/@babel/parser/lib/index.js:6616:19)
    at TypeScriptParserMixin.unexpected (/media/budgei/Development2/Php/tokona/node_modules/@babel/parser/lib/index.js:6636:16)
    at TypeScriptParserMixin.parseExprAtom (/media/budgei/Development2/Php/tokona/node_modules/@babel/parser/lib/index.js:11459:22)
    at TypeScriptParserMixin.parseExprAtom (/media/budgei/Development2/Php/tokona/node_modules/@babel/parser/lib/index.js:4776:20)
    at TypeScriptParserMixin.parseExprSubscripts (/media/budgei/Development2/Php/tokona/node_modules/@babel/parser/lib/index.js:11098:23)
    at TypeScriptParserMixin.parseUpdate (/media/budgei/Development2/Php/tokona/node_modules/@babel/parser/lib/index.js:11083:21)
    at TypeScriptParserMixin.parseMaybeUnary (/media/budgei/Development2/Php/tokona/node_modules/@babel/parser/lib/index.js:11063:23)
    at TypeScriptParserMixin.parseMaybeUnary (/media/budgei/Development2/Php/tokona/node_modules/@babel/parser/lib/index.js:9854:18)
    at TypeScriptParserMixin.parseMaybeUnaryOrPrivate (/media/budgei/Development2/Php/tokona/node_modules/@babel/parser/lib/index.js:10916:61)
    at TypeScriptParserMixin.parseExprOps (/media/budgei/Development2/Php/tokona/node_modules/@babel/parser/lib/index.js:10921:23)
    at TypeScriptParserMixin.parseMaybeConditional (/media/budgei/Development2/Php/tokona/node_modules/@babel/parser/lib/index.js:10898:23)
    at TypeScriptParserMixin.parseMaybeAssign (/media/budgei/Development2/Php/tokona/node_modules/@babel/parser/lib/index.js:10848:21)
    at TypeScriptParserMixin.parseMaybeAssign (/media/budgei/Development2/Php/tokona/node_modules/@babel/parser/lib/index.js:9803:20)
    at TypeScriptParserMixin.parseExpressionBase (/media/budgei/Development2/Php/tokona/node_modules/@babel/parser/lib/index.js:10801:23)
    at /media/budgei/Development2/Php/tokona/node_modules/@babel/parser/lib/index.js:10797:39
    at TypeScriptParserMixin.allowInAnd (/media/budgei/Development2/Php/tokona/node_modules/@babel/parser/lib/index.js:12438:16)
    at TypeScriptParserMixin.parseExpression (/media/budgei/Development2/Php/tokona/node_modules/@babel/parser/lib/index.js:10797:17)
    at TypeScriptParserMixin.parseStatementContent (/media/budgei/Development2/Php/tokona/node_modules/@babel/parser/lib/index.js:12912:23)
    at TypeScriptParserMixin.parseStatementContent (/media/budgei/Development2/Php/tokona/node_modules/@babel/parser/lib/index.js:9525:18)
    at TypeScriptParserMixin.parseStatementLike (/media/budgei/Development2/Php/tokona/node_modules/@babel/parser/lib/index.js:12784:17)
    at TypeScriptParserMixin.parseModuleItem (/media/budgei/Development2/Php/tokona/node_modules/@babel/parser/lib/index.js:12761:17)
    at TypeScriptParserMixin.parseBlockOrModuleBlockBody (/media/budgei/Development2/Php/tokona/node_modules/@babel/parser/lib/index.js:13333:36)
    at TypeScriptParserMixin.parseBlockBody (/media/budgei/Development2/Php/tokona/node_modules/@babel/parser/lib/index.js:13326:10)
    at TypeScriptParserMixin.parseProgram (/media/budgei/Development2/Php/tokona/node_modules/@babel/parser/lib/index.js:12639:10)
    at TypeScriptParserMixin.parseTopLevel (/media/budgei/Development2/Php/tokona/node_modules/@babel/parser/lib/index.js:12629:25)
    at TypeScriptParserMixin.parse (/media/budgei/Development2/Php/tokona/node_modules/@babel/parser/lib/index.js:14505:25)
    at TypeScriptParserMixin.parse (/media/budgei/Development2/Php/tokona/node_modules/@babel/parser/lib/index.js:10143:18)
    at parse (/media/budgei/Development2/Php/tokona/node_modules/@babel/parser/lib/index.js:14539:38)
    at parser (/media/budgei/Development2/Php/tokona/node_modules/@babel/core/lib/parser/index.js:41:34)
    at parser.next (<anonymous>)
    at normalizeFile (/media/budgei/Development2/Php/tokona/node_modules/@babel/core/lib/transformation/normalize-file.js:51:37)
    at normalizeFile.next (<anonymous>)
    at run (/media/budgei/Development2/Php/tokona/node_modules/@babel/core/lib/transformation/index.js:22:50)
    at run.next (<anonymous>)
    at transform (/media/budgei/Development2/Php/tokona/node_modules/@babel/core/lib/transform.js:22:33)
    at transform.next (<anonymous>)
    at step (/media/budgei/Development2/Php/tokona/node_modules/gensync/index.js:261:32)
    at evaluateAsync (/media/budgei/Development2/Php/tokona/node_modules/gensync/index.js:291:5)
    at /media/budgei/Development2/Php/tokona/node_modules/gensync/index.js:93:9
    at new Promise (<anonymous>)
    at async (/media/budgei/Development2/Php/tokona/node_modules/gensync/index.js:92:14)
    at stopHiding - secret - don't use this - v1 (/media/budgei/Development2/Php/tokona/node_modules/@babel/core/lib/errors/rewrite-stack-trace.js:47:12)
    at Module.transformAsync (/media/budgei/Development2/Php/tokona/node_modules/@babel/core/lib/transform.js:43:77)
    at TransformPluginContextImpl.handler (file:///media/budgei/Development2/Php/tokona/node_modules/@vitejs/plugin-react/dist/index.js:206:46)
    at async plugin (file:///media/budgei/Development2/Php/tokona/node_modules/rolldown/dist/shared/bindingify-input-options-DmY7myA4.mjs:1185:16)
    at async plugin.<computed> (file:///media/budgei/Development2/Php/tokona/node_modules/rolldown/dist/shared/bindingify-input-options-DmY7myA4.mjs:1625:12)
    at aggregateBindingErrorsIntoJsError (file:///media/budgei/Development2/Php/tokona/node_modules/rolldown/dist/shared/error-B8po7KiL.mjs:48:18)
    at plugin (file:///media/budgei/Development2/Php/tokona/node_modules/rolldown/dist/shared/bindingify-input-options-DmY7myA4.mjs:1080:61)
    at plugin.<computed> (file:///media/budgei/Development2/Php/tokona/node_modules/rolldown/dist/shared/bindingify-input-options-DmY7myA4.mjs:1625:18)
    at aggregateBindingErrorsIntoJsError (file:///media/budgei/Development2/Php/tokona/node_modules/rolldown/dist/shared/error-B8po7KiL.mjs:48:18)
    at unwrapBindingResult (file:///media/budgei/Development2/Php/tokona/node_modules/rolldown/dist/shared/error-B8po7KiL.mjs:18:128)
    at #build (file:///media/budgei/Development2/Php/tokona/node_modules/rolldown/dist/shared/rolldown-build-9MccaWPU.mjs:3236:34)
    at async buildEnvironment (file:///media/budgei/Development2/Php/tokona/node_modules/vite/dist/node/chunks/node.js:33137:64)
    at async Object.build (file:///media/budgei/Development2/Php/tokona/node_modules/vite/dist/node/chunks/node.js:33559:19)
    at async Object.buildApp (file:///media/budgei/Development2/Php/tokona/node_modules/vite/dist/node/chunks/node.js:33556:153)
    at async CAC.<anonymous> (file:///media/budgei/Development2/Php/tokona/node_modules/vite/dist/node/cli.js:777:3) {
  errors: [Getter/Setter]
}
